Fix text alignment

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-* {
+body {
   font-family: 'Ysabeau', sans-serif;
   font-size: 22px;
   font-weight: 200;
@@ -16,6 +16,7 @@
 
 h1 {
   font-size: 28px;
+  font-weight: normal;
   margin-top: 0;
   margin-bottom: 0.5rem;
 }
